package com.example.desktopcontroller;

public interface CallbackReceiver {
     void receiveData(Object result);
}
